<resources>
    <string name="app_name">CubeChronometer</string>

    <string name="menu_about">О программе</string>
    <string name="menu_restart">Начать сначала</string>
    <string name="menu_set_average">Задать среднее</string>
    <string name="menu_min_time">Лучшее время</string>
    <string name="menu_min_average_time">Лучшее среднее</string>
    <string name="mail_address">Все баги и предложения посылаются на <a href="mailto:uniqdela@gmail.com">uniqdela@gmail.com</a></string>
    <string name="the_best_average">Лучшее среднее время: </string>
    <string name="about_text_title">Cube Chronometer v0.8</string>
    <string name="about_text">О программе</string>
    <string name="best_time">Лучшее время</string>
    <string name="_50">50</string>
    <string name="average_time">Среднее время</string>
    <string name="wish_time">Заданное среднее</string>
    <string name="leftTime">Макс. время</string>
    <string name="_50_2">50</string>
    <string name="button">button</string>
    <string name="info_text_for_10_times">Здесь будет какой-то текст</string>
    <string name="zero_value">-</string>
    <string name="looser_message">Поздравляю, ты - Лощара!</string>
    <string name="restart">Перезапустить?</string>
    <string name="ok">OK</string>
    <string name="cancel">Ай, нет</string>
    <string name="new_best_average">Поздравляю! Новый рекорд среднего времени!</string>
    <string name="new_best_time">Поздравляю! Новый рекорд! Сохранить?</string>
</resources>
