<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >

    <item android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:orderInCategory="4"
        app:showAsAction="never" />

    <item android:id="@+id/menu_restart"
        android:title="@string/menu_restart"
        android:orderInCategory="3"
        app:showAsAction="never" />

    <item android:id="@+id/menu_set_average"
        android:title="@string/menu_set_average"
        android:orderInCategory="2"
        app:showAsAction="never" />

    <item android:id="@+id/menu_min_time"
        android:title="@string/menu_min_time"
        android:orderInCategory="1"
        app:showAsAction="never" />

</menu>