<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textSize="50sp"
        android:layout_above="@+id/linearLayout4"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <TextView
            android:text="@string/best_time"
            android:id="@+id/best_time"
            style="@style/small_text" />

        <TextView
            android:text="@string/_50"
            android:id="@+id/best_time_value"
            style="@style/small_text"/>

        <TextView
            android:text="@string/the_best_average"
            android:id="@+id/best_average"
            style="@style/small_text"/>
            <!--android:gravity="right" />-->

        <TextView
            android:text="@string/_50"
            android:id="@+id/best_average_value"
            style="@style/small_text"/>
            <!--android:gravity="left"-->
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout3"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout4">

        <TextView
            android:text="@string/average_time"
            android:id="@+id/average_time"
            style="@style/small_text" />

        <TextView
            android:text="@string/wish_time"
            android:textColor="@color/green"
            style="@style/small_text"
            android:id="@+id/wish_time" />

        <TextView
            android:text="@string/leftTime"
            style="@style/small_text"
            android:id="@+id/left_time" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="18dp"
        android:id="@+id/linearLayout3">

        <TextView
            style="@style/numbers"
            android:id="@+id/average_time_value" />

        <TextView
            style="@style/numbers"
            android:textColor="@color/green"
            android:id="@+id/wish_time_value"
            android:text="@string/_50_2" />

        <TextView
            style="@style/numbers"
            android:id="@+id/left_time_value"
            />
    </LinearLayout>

    <!-- BIG BUTTON -->
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:id="@+id/imageButton"
        android:src="@drawable/big_green"
        android:layout_gravity="center_horizontal"
        tools:layout_editor_absoluteY="304dp"
        tools:layout_editor_absoluteX="92dp"
        android:contentDescription="@string/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <!-- LEFT TIMES -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/imageButton"
        android:layout_alignStart="@+id/imageButton"
        android:id="@+id/linearLayout2">

        <TextView
            android:id="@+id/time1"
            style="@style/result_text" />

        <TextView
            android:id="@+id/time2"
            style="@style/result_text" />

        <TextView
            android:id="@+id/time3"
            style="@style/result_text" />

        <TextView
            android:id="@+id/time4"
            style="@style/result_text" />

        <TextView
            android:id="@+id/time5"
            style="@style/result_text" />

    </LinearLayout>

    <!-- RIGHT TIMES -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/imageButton"
        android:layout_alignEnd="@+id/imageButton">

        <TextView
            android:id="@+id/time6"
            style="@style/result_text" />

        <TextView
            android:id="@+id/time7"
            style="@style/result_text" />

        <TextView
            android:id="@+id/time8"
            style="@style/result_text" />

        <TextView
            android:id="@+id/time9"
            style="@style/result_text" />

        <TextView
            android:id="@+id/time10"
            style="@style/result_text" />

    </LinearLayout>

</RelativeLayout>
